Bug 96536 - Hide whitespace mode: page size is unchanged after paragraph delete
Summary: Hide whitespace mode: page size is unchanged after paragraph delete
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:5.2.0 target:5.1.0.2
Keywords:
Depends on:
Blocks:
 
Reported: 2015-12-16 13:47 UTC by Miklos Vajna
Modified: 2016-10-25 19:11 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
How it looks like currently (53.76 KB, image/png)
2015-12-16 13:47 UTC, Miklos Vajna
Details
How it should look like, I guess. (53.57 KB, image/png)
2015-12-16 13:47 UTC, Miklos Vajna
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Miklos Vajna 2015-12-16 13:47:01 UTC
Created attachment 121340 [details]
How it looks like currently

This is a follow-up for bug 96515.

How to reproduce:

1) Start Writer.
2) View -> Hide Whitespace
3) Press "enter" e.g. 5 times, notice how the page height is now larger, good.
4) Press "backspace" 5 times.
5) Notice how the page height is unchanged.

Expected: layout shrinks the page height after keyboard delete shrinks the content height.

Actual: page height is unchanged.
Comment 1 Miklos Vajna 2015-12-16 13:47:37 UTC
Created attachment 121341 [details]
How it should look like, I guess.
Comment 2 Commit Notification 2015-12-16 15:04:10 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=72f0067258fd7738217abd43452abe282e05c11b

tdf#96536 sw Hide Whitespace: shrink oversized page frames on para delete

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2016-01-11 14:25:01 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d3584878aee1bee36e9cc18e58a75dbc95b3e283&h=libreoffice-5-1

tdf#96536 sw Hide Whitespace: shrink oversized page frames on para delete

It will be available in 5.1.0.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.