tdf#96536 sw Hide Whitespace: shrink oversized page frames on para delete

The body frame did get a request to shrink, but because it had fixed
size, nothing happened. Trigger a recalc that does the right thing wrt.
hidden whitespace.

(cherry picked from commit 72f0067258fd7738217abd43452abe282e05c11b)

Conflicts:
	sw/qa/extras/uiwriter/uiwriter.cxx
	sw/source/core/layout/calcmove.cxx

Change-Id: I446978da8b33372c2ab30200b45b1bcec1dea7a0